--- a/styles/style.css
+++ b/styles/style.css
@@ -12,5 +12,17 @@ section > div				{padding: 20px;}
 header, section		{background: #eee; text-align: center;}
 footer					{background: #eee; text-align: center;}
 
+.form-border		{display:inline-block; width: 50%;
+ -webkit-border-radius: 10px 10px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
+  background: #fff;
+  padding: 30px;
+  width: 90%;
+  max-width: 450px;
+  position: relative;
+  padding: 10px;
+  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  text-align: center;}
 
 #ErrorMsgs          		 { color: #f61; font-size: smaler}
